--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,10 @@ dependencies {
     // Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
+
+    //Circular Image
+//    implementation 'de.hdodenhof:cicleimageview:3.0.0'
+
+    //Date Time
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.3.1'
 }
