--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,4 +79,6 @@ dependencies {
 
     //Date Time
     implementation 'com.jakewharton.threetenabp:threetenabp:1.3.1'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
